fix section-title padding on small devices

--- a/css/alkindy.css
+++ b/css/alkindy.css
@@ -118,14 +118,22 @@ div.logo-bg img {
 	background-size: cover;
 	background-attachment: fixed;
 }
-
+@media only screen and (min-width : 320px) and (max-width : 767px) {
+	.section-title {
+		padding: 20px;
+	}
+}
+@media (min-width: 767px){
+	.section-title {
+		padding: 20px 100px;
+	}
+}
 .section-title {
 	line-height: 2em;
 	/* background: rgba(255, 255, 255, 0.54); */
 	border-radius: 10px;
 	border: 5px solid #fff;
 	display: inline-block;
-	padding: 20px 100px;
 	font-weight: bold;
 }
 
